# ikaros

./: .gitignore  CMakeLists.txt  ReadMe.md
Source/: ikaros.h
Source/Modules/RobotModules/CompliantRobot/TestMapping/: ANN_models_plots.ipynb  ANN_prediction.py  CMakeLists.txt  TestMapping.cc  TestMapping.ikc  TestMapping_old.cc  perturbation_calssification.ipynb  requirements.txt
Source/Modules/RobotModules/CompliantRobot/TestMapping/tMLP_models/: evaulation_visualisation.ipynb  temporal_mlp_TimeSteps0.keras  temporal_mlp_TimeSteps0_no_IMU.keras  temporal_mlp_TimeSteps1.keras  temporal_mlp_TimeSteps10.keras  temporal_mlp_TimeSteps10_no_IMU.keras  temporal_mlp_TimeSteps15.keras  temporal_mlp_TimeSteps15_no_IMU.keras  temporal_mlp_TimeSteps1_no_IMU.keras  temporal_mlp_TimeSteps3.keras  temporal_mlp_TimeSteps3_no_IMU.keras  temporal_mlp_TimeSteps5.keras  temporal_mlp_TimeSteps5_no_IMU.keras
Source/Modules/RobotModules/CompliantRobot/TestMapping/tMLP_models/history/: history_temporal_mlp_TimeSteps0.pkl  history_temporal_mlp_TimeSteps0_no_IMU.pkl  history_temporal_mlp_TimeSteps1.pkl  history_temporal_mlp_TimeSteps10.pkl  history_temporal_mlp_TimeSteps10_no_IMU.pkl  history_temporal_mlp_TimeSteps15.pkl  history_temporal_mlp_TimeSteps15_no_IMU.pkl  history_temporal_mlp_TimeSteps1_no_IMU.pkl  history_temporal_mlp_TimeSteps3.pkl  (+3 more)
Source/Modules/RobotModules/CompliantRobot/TestMapping/weights/: mean_std.json  pan_filtered_model.weights.h5  pan_filtered_model_config.json  pan_mean_std.json  tilt_filtered_model.weights.h5  tilt_filtered_model_config.json  tilt_mean_std.json
(+103 files in other folders)
